--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 NODE_ENV=production
 APP_URL=https://readit-himanshu.herokuapp.com/
-ORIGIN=http://localhost:3000
+ORIGIN=https://readit-himanshu.netlify.app/
 
 JWT_SECRET=somethingsecret
 
