--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV=production
-APP_URL=http://readit-himanshu.herokuapp.com/
-ORIGIN=http://localhost:3000
+APP_URL=http://readit-himanshu.herokuapp.com
+ORIGIN=https://readit-himanshu.netlify.app
 
 JWT_SECRET=somethingsecret
 DB_DIALECT=postgres
