--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
+PORT=5000
 NODE_ENV=production
-APP_URL=http://readit-himanshu.herokuapp.com
-ORIGIN=https://readit-himanshu.netlify.app
+APP_URL=http://localhost:5000
+ORIGIN=http://localhost:3000
 
 JWT_SECRET=somethingsecret
+
 DB_DIALECT=postgres
 DB_PORT=5432
 DB_HOST=ec2-34-206-8-52.compute-1.amazonaws.com
